--- a/locales/ja/about.json
+++ b/locales/ja/about.json
@@ -4,18 +4,18 @@
     "title": "私たちの投資家の方々"
   },
   "message": {
-    "important": "最も重要なこと、",
-    "journey": "この瞬間を可能にしてくださって心からありがとうございます。",
+    "important": "最後に、",
+    "journey": "この瞬間を可能にしてくださっている貴方へ心からありがとうございます。",
     "thankYou": "おかげさまで"
   },
   "mission": {
-    "mission": "最大限人々が素晴らしい仕事をすることを可能にする",
+    "mission": "人々がより素晴らしい仕事をする世界を実現する",
     "special": "特に事を成そうと挑戦する人へ向けて",
-    "target": "オンラインで一緒に働くすべての人々のためのプロダクトを作ります。",
+    "target": "オンラインで仕事をするすべての人々のためのプロダクトを作ります。",
     "title": "我々のミッション"
   },
   "team": {
-    "meet": "私たちの素晴らしいチームの紹介",
+    "meet": "私たちの素晴らしいチームのご紹介",
     "title": "私たちのチーム"
   }
 }
