--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -42,6 +42,7 @@
     "profile": "Profile",
     "quit": "Quit",
     "room": "Room",
+    "rooms": "Rooms",
     "settings": "Settings",
     "space": "Space",
     "status": "Status",
