--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -14,6 +14,7 @@
     "description": "Description",
     "edit": "Edit",
     "email": "Email Address",
+    "feedback": "Feedback",
     "focus": "Focus",
     "help": "Help",
     "id": "ID",
@@ -46,6 +47,7 @@
     "settings": "Settings",
     "space": "Space",
     "status": "Status",
+    "support": "Support",
     "title": "Sentrei",
     "type": "Type",
     "update": "Update",
