feat: 🎸 ini app list menu

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -38,6 +38,7 @@
     "passwordConfirm": "Password Confirmation",
     "passwordNew": "New Password",
     "passwordOld": "Old Password",
+    "personal": "Personal",
     "photo": "Photo",
     "pickYourEmoji": "Pick Your Emoji",
     "profile": "Profile",
@@ -48,6 +49,7 @@
     "space": "Space",
     "status": "Status",
     "support": "Support",
+    "team": "Team",
     "title": "Sentrei",
     "type": "Type",
     "update": "Update",
