feat: 🎸 ini space panel

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -45,6 +45,7 @@
     "quit": "Quit",
     "room": "Room",
     "rooms": "Rooms",
+    "score": "Score",
     "settings": "Settings",
     "space": "Space",
     "status": "Status",
