feat: 🎸 ni space panel action

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -47,6 +47,7 @@
     "rooms": "Rooms",
     "score": "Score",
     "settings": "Settings",
+    "share": "Share",
     "space": "Space",
     "status": "Status",
     "support": "Support",
