perf: ⚡️ ini tier i18n

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -14,8 +14,10 @@
     "description": "Description",
     "edit": "Edit",
     "email": "Email Address",
+    "enterprise": "Enterprise",
     "feedback": "Feedback",
     "focus": "Focus",
+    "free": "Free",
     "help": "Help",
     "id": "ID",
     "invite": "Invite",
@@ -28,6 +30,7 @@
     "members": "Members",
     "mode": "Mode",
     "mySpaces": "My Spaces",
+    "pro": "Pro",
     "name": "Name",
     "never": "Never",
     "next": "Next",
