--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -19,6 +19,7 @@
     "focus": "Focus",
     "free": "Free",
     "help": "Help",
+    "home": "Home",
     "id": "ID",
     "invite": "Invite",
     "language": "Language",
