perf: ⚡️ refactor space panel banner

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -12,6 +12,7 @@
     "day": "Day",
     "delete": "Delete",
     "description": "Description",
+    "duration": "Duration",
     "edit": "Edit",
     "email": "Email Address",
     "enterprise": "Enterprise",
