feat: 🎸 ini space analytics

--- a/locales/en/space.json
+++ b/locales/en/space.json
@@ -2,6 +2,9 @@
   "activity": {
     "title": "Activity"
   },
+  "analytics": {
+    "title": "Analytics"
+  },
   "dashboard": {
     "create": "Create one",
     "none": "You have no spaces ...",
