perf: ⚡️ imp i18n common

--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -12,10 +12,15 @@
     "day": "日",
     "delete": "削除する",
     "description": "説明",
+    "duration": "期間",
     "edit": "編集する",
     "email": "電子メールアドレス",
+    "enterprise": "企業",
+    "feedback": "フィードバック",
     "focus": "フォーカス",
+    "free": "自由",
     "help": "助けて",
+    "home": "ホーム",
     "id": "ID",
     "invite": "招待する",
     "language": "言語",
@@ -37,20 +42,28 @@
     "passwordConfirm": "パスワードの確認",
     "passwordNew": "新しいパスワード",
     "passwordOld": "以前のパスワード",
+    "personal": "個人的な",
     "photo": "写真",
     "pickYourEmoji": "絵文字を選んでください",
+    "pro": "プロ",
     "profile": "プロフィール",
     "quit": "終了する",
     "room": "ルーム",
+    "rooms": "部屋",
+    "score": "スコア",
     "settings": "設定",
+    "share": "共有",
     "space": "スペース",
     "status": "状態",
+    "support": "サポート",
+    "team": "チーム",
     "title": "セントレイ",
     "type": "タイプ",
     "update": "更新",
     "username": "ユーザー名",
     "visit": "訪問",
     "week": "週間",
+    "workspace": "ワークスペース",
     "writeYourStatus": "あなたのステータスを書いてください..."
   },
   "snackbar": {
