--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -12,10 +12,15 @@
     "day": "天",
     "delete": "删除",
     "description": "描述",
+    "duration": "持续时间",
     "edit": "编辑",
     "email": "电子邮件地址",
+    "enterprise": "企业",
+    "feedback": "反馈",
     "focus": "焦点",
+    "free": "自由",
     "help": "救命",
+    "home": "家",
     "id": "ID",
     "invite": "邀请",
     "language": "语言",
@@ -37,20 +42,28 @@
     "passwordConfirm": "确认密码",
     "passwordNew": "新密码",
     "passwordOld": "旧密码",
+    "personal": "个人",
     "photo": "照片",
     "pickYourEmoji": "选择您的表情符号",
+    "pro": "专业版",
     "profile": "个人资料",
     "quit": "退出",
     "room": "房间",
+    "rooms": "房间数",
+    "score": "得分",
     "settings": "设定值",
+    "share": "分享",
     "space": "空间",
     "status": "状态",
+    "support": "支持",
+    "team": "球队",
     "title": "森特雷",
     "type": "类型",
     "update": "更新资料",
     "username": "用户名",
     "visit": "访问",
     "week": "周",
+    "workspace": "工作空间",
     "writeYourStatus": "写你的状态..."
   },
   "snackbar": {
