--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -8,6 +8,7 @@
     "billing": "Billing",
     "cancel": "Cancel",
     "create": "Create",
+    "createSpace": "Create a Space",
     "darkMode": "Dark Mode",
     "dashboard": "Dashboard",
     "day": "Day",
