perf: ⚡️ refactoring ui components

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -51,6 +51,7 @@
     "pro": "Pro",
     "profile": "Profile",
     "quit": "Quit",
+    "ranking": "Ranking",
     "role": "Role",
     "room": "Room",
     "rooms": "Rooms",
