--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -51,6 +51,7 @@
     "pro": "プロ",
     "profile": "プロフィール",
     "quit": "終了する",
+    "ranking": "ランキング",
     "role": "役割",
     "room": "ルーム",
     "rooms": "部屋",
