--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -51,6 +51,7 @@
     "pro": "专业版",
     "profile": "个人资料",
     "quit": "退出",
+    "ranking": "排行",
     "role": "角色",
     "room": "房间",
     "rooms": "房间数",
