chore: 🤖 update href for support in pricing

--- a/locales/en/header.json
+++ b/locales/en/header.json
@@ -7,7 +7,8 @@
   "default": {
     "about": "About",
     "home": "Home",
-    "pricing": "Pricing"
+    "pricing": "Pricing",
+    "support": "Support"
   },
   "header": {
     "login": "Log In",
