perf: ⚡️ update about core

--- a/locales/en/about.json
+++ b/locales/en/about.json
@@ -1,8 +1,8 @@
 {
   "core": {
     "open": {
-      "subTitle": "We believe in open source and transparency. We will support open source technology and will strive towards being a driving force behing it. We also will be as transparent as possible regarding every aspect of our business.",
-      "title": "Open Source & Transparency"
+      "subTitle": "We believe in open source and transparency. We will support and drive open source technology forward. We also will be as transparent as possible regarding every aspect of our business.",
+      "title": "Open Source"
     },
     "think": {
       "subTitle": "We will strive to think as different as possible. We will not defer to the status quo, nor will we accept what is considered normal to be the norm. We value diversity & ingenuity more than anyone else.",
