perf: ⚡️ i18n for core

--- a/locales/ja/about.json
+++ b/locales/ja/about.json
@@ -1,4 +1,20 @@
 {
+  "core": {
+    "open": {
+      "subTitle": "私たちはオープンソースと透明性を信じています。\n私たちはオープンソース技術をサポートし、推進します。\nまた、事業のあらゆる側面について可能な限り透明性を確保します。",
+      "title": "オープンソース"
+    },
+    "root": "私たちの基本的な価値観",
+    "think": {
+      "subTitle": "私たちは可能な限り異なる考えに努めます。\n私たちは現状に固執することはなく、また、正常であると見なされるものを標準として受け入れることもありません。\n私たちは多様性を大切にします",
+      "title": "違うと思う"
+    },
+    "title": "基本的価値観",
+    "work": {
+      "subTitle": "私たちは素晴らしい仕事をするよう努めます。\n素晴らしいとは思えない仕事はしません。\n私たちは基準を下げることはせず、現時点で素晴らしいことを追求し続けます。",
+      "title": "素晴らしい仕事をする"
+    }
+  },
   "investor": {
     "back": "私たちは素晴らしい投資家の方々に支えられています",
     "title": "私たちの投資家の方々"
