--- a/locales/zh/about.json
+++ b/locales/zh/about.json
@@ -1,4 +1,20 @@
 {
+  "core": {
+    "open": {
+      "subTitle": "我们相信开源和透明。\n我们将支持并推动开源技术的发展。\n我们还将在业务的各个方面尽可能地保持透明。",
+      "title": "开源的"
+    },
+    "root": "我们所坚持的基本价值观",
+    "think": {
+      "subTitle": "我们将努力思考尽可能不同的地方。\n我们不会遵从现状，也不会接受被认为是正常的规范。\n我们重视多样性",
+      "title": "认为不同"
+    },
+    "title": "核心价值",
+    "work": {
+      "subTitle": "我们将努力做好。\n我们不会从事我们认为不出色的工作。\n我们不会降低我们的标准，并会继续追求卓越。",
+      "title": "做好工作"
+    }
+  },
   "investor": {
     "back": "我们得到了一群不可思议的投资者的支持",
     "title": "我们的投资者"
