feat: 🎸 ini app feedback

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -60,6 +60,7 @@
     "share": "Share",
     "space": "Space",
     "status": "Status",
+    "submit": "Submit",
     "support": "Support",
     "team": "Team",
     "title": "Sentrei",
