perf: ⚡️ refactor button createRoom

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -8,6 +8,7 @@
     "billing": "Billing",
     "cancel": "Cancel",
     "create": "Create",
+    "createRoom": "Create Room",
     "createSpace": "Create a Space",
     "darkMode": "Dark Mode",
     "dashboard": "Dashboard",
