feat: 🎸 ini grid settings component group

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -22,6 +22,7 @@
     "feedback": "Feedback",
     "focus": "Focus",
     "free": "Free",
+    "general": "General",
     "help": "Help",
     "home": "Home",
     "id": "ID",
