--- a/packages/pioneer/src/sus/2020/11.md
+++ b/packages/pioneer/src/sus/2020/11.md
@@ -10,11 +10,11 @@
 
 ### Users/prospective users talked to in the last week?
 
-1
+3
 
 ### What have you learned from them?
 
-🚀 Launch the product ASAP.
+🚀 The UI/UX needs to be more professional in order for $30/user per month.
 
 ## Goals and Morale
 
@@ -30,10 +30,10 @@
 
 ### Biggest obstacle?
 
-Performance for Each Day (Quantitatively)
+🔥 Best Performance for Each Day (Quantitatively)
 
 ### What are your top 1-3 goals for the next week?
 
-1. 💅 Complete Refactor UI/UX
-2. 🌈 Form Reform (Backend, Picture, Settings)
-3. 🏦 Billing Subscription w/Stripe
+1. 💅 Completely refactor UI/UX (AppHeader)
+2. 🌈 Initiate app status feature
+3. 👤 Finish asynchronous video chat
