--- a/packages/pioneer/src/sus/2020/13.md
+++ b/packages/pioneer/src/sus/2020/13.md
@@ -34,6 +34,6 @@ Consistent performance for each day so that I could launch the product in time. 
 
 ### What are your top 1-3 goals for the next week?
 
-1. 💅 Complete Refactor UI/UX
-2. 🌈 Form Reform (Backend, Picture, Settings)
+1. 💅 Complete Asynchronous Video
+2. 🌈 Refactor Space Backend and Form
 3. 🏦 Billing Subscription w/Stripe
