perf: ⚡️ i18n for common

--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -8,6 +8,7 @@
     "billing": "課金",
     "cancel": "キャンセル",
     "create": "作成する",
+    "createRoom": "部屋を作成",
     "createSpace": "スペースを作成する",
     "darkMode": "ダークモード",
     "dashboard": "ダッシュボード",
@@ -21,6 +22,7 @@
     "feedback": "フィードバック",
     "focus": "フォーカス",
     "free": "自由",
+    "general": "一般的な",
     "help": "助けて",
     "home": "ホーム",
     "id": "ID",
@@ -60,6 +62,7 @@
     "share": "共有",
     "space": "スペース",
     "status": "状態",
+    "submit": "参加する",
     "support": "サポート",
     "team": "チーム",
     "title": "セントレイ",
