--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -8,6 +8,7 @@
     "billing": "开票",
     "cancel": "取消",
     "create": "创造",
+    "createRoom": "创建房间",
     "createSpace": "创建一个空间",
     "darkMode": "暗模式",
     "dashboard": "仪表板",
@@ -21,6 +22,7 @@
     "feedback": "反馈",
     "focus": "焦点",
     "free": "自由",
+    "general": "一般",
     "help": "救命",
     "home": "家",
     "id": "ID",
@@ -60,6 +62,7 @@
     "share": "分享",
     "space": "空间",
     "status": "状态",
+    "submit": "提交",
     "support": "支持",
     "team": "球队",
     "title": "森特雷",
