--- a/locales/en/form.json
+++ b/locales/en/form.json
@@ -31,10 +31,10 @@
   "type": {
     "typeRequired": "Type is required"
   },
-  "username": {
-    "usernameAlreadyUsed": "Username is already used",
-    "usernameInvalid": "Username is invalid",
-    "usernameNotExist": "Username doesn't exist",
-    "usernameRequired": "Username is required"
+  "namespace": {
+    "namespaceAlreadyUsed": "Namespace is already used",
+    "namespaceInvalid": "Namespace is invalid",
+    "namespaceNotExist": "Namespace doesn't exist",
+    "namespaceRequired": "Namespace is required"
   }
 }
