--- a/packages/pioneer/src/day/2020/07/08.md
+++ b/packages/pioneer/src/day/2020/07/08.md
@@ -6,7 +6,7 @@
 
 1. Initate video package [#2934](https://github.com/sentrei/sentrei/issues/2934)
 2. Integrate edit page for screen [#2935](https://github.com/sentrei/sentrei/issues/2935)
-3. Integrate profile page w/ username [#2936](https://github.com/sentrei/sentrei/issues/2936)
+3. Integrate profile page w/ namespace [#2936](https://github.com/sentrei/sentrei/issues/2936)
 
 ## Morning [#2929](https://github.com/sentrei/sentrei/issues/2929)
 
