--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -68,7 +68,7 @@
     "title": "セントレイ",
     "type": "タイプ",
     "update": "更新",
-    "username": "ユーザー名",
+    "namespace": "ユーザー名",
     "visit": "訪問",
     "week": "週間",
     "workspace": "ワークスペース",
