--- a/packages/pioneer/src/sus/2020/12.md
+++ b/packages/pioneer/src/sus/2020/12.md
@@ -10,7 +10,7 @@
 
 ### Users/prospective users talked to in the last week?
 
-1
+3
 
 ### What have you learned from them?
 
@@ -20,20 +20,20 @@
 
 ### On a scale of 1-10, what is your morale?
 
-10
+7
 
 ### What most improved your primary metric?
 
-1. 🌈 Days until launch: 17 Days
-2. 🚀 Version v1.1.5 -> v1.18.0
-3. 🚗 Github Stars 2 -> 4
+1. 🌈 Days until launch: 24 Days
+2. 🚀 Version v1.41.0 -> v1.1.4
+3. 🚗 Github Stars 0 -> 2
 
 ### Biggest obstacle?
 
-Consistent performance for each day so that I could launch the product in time. 😎
+🔥 Best Performance for Each Day (Quantitatively)
 
 ### What are your top 1-3 goals for the next week?
 
-1. 💅 Complete Refactor UI/UX
-2. 🌈 Form Reform (Backend, Picture, Settings)
-3. 🏦 Billing Subscription w/Stripe
+1. 💅 Completely refactor UI/UX (AppHeader)
+2. 🌈 Initiate app status feature
+3. 👤 Finish asynchronous video chat
