--- a/packages/pioneer/src/sus/2020/14.md
+++ b/packages/pioneer/src/sus/2020/14.md
@@ -1,39 +1,39 @@
-# Weekly Update | Aug 24–Aug 30, 2020
+# Weekly Update | Aug 31–Sep 6, 2020
 
 ## Launch
 
 ### Weeks to launch
 
-3
+2
 
 ## Users
 
 ### Users/prospective users talked to in the last week?
 
-12
+14
 
 ### What have you learned from them?
 
-🚀 Launch the product ASAP.
+🦄 Launch the product!
 
 ## Goals and Morale
 
 ### On a scale of 1-10, what is your morale?
 
-10
+7
 
 ### What most improved your primary metric?
 
-1. 🌈 Days until launch: 17 Days
-2. 🚀 Version v1.1.5 -> v1.18.0
-3. 🚗 Github Stars 2 -> 4
+1. 🌈 Days until launch: 10 Days
+2. 🚀 Version v1.18.0 ->
+3. 🚗 Github Stars 4 ->
 
 ### Biggest obstacle?
 
-Consistent performance for each day so that I could launch the product in time. 😎
+Best performance for each day so I could launch the product and meet the sprint goal. 🦄
 
 ### What are your top 1-3 goals for the next week?
 
-1. 💅 Complete Refactor UI/UX
-2. 🌈 Form Reform (Backend, Picture, Settings)
+1. 💅 Refactor Space Backend and Form
+2. 🌈 Complete Asynchronous Video
 3. 🏦 Billing Subscription w/Stripe
