--- a/locales/ja/credits.json
+++ b/locales/ja/credits.json
@@ -19,9 +19,11 @@
       "yuKakinoki": "Yu Kakinoki"
     },
     "friends": {
+      "hibikiOtawara": "Hibiki Otawara",
       "kojuFuruta": "Koju Furuta",
       "ryotaroSaishu": "Ryotaro Saishu",
-      "yuiTonokawa": "Yui Tonokawa"
+      "yuiTonokawa": "Yui Tonokawa",
+      "yusukeSatomi": "Yusuke Satomi"
     },
     "shunkakinoki": "Shun Kakinoki"
   }
