feat: 🎸 migrate namespace to username for profile form

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -69,6 +69,7 @@
     "title": "Sentrei",
     "type": "Type",
     "update": "Update",
+    "username": "Username",
     "visit": "Visit",
     "week": "Week",
     "workspace": "Workspace",
