perf: ⚡️ ini i18n common & form

--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -69,6 +69,7 @@
     "title": "セントレイ",
     "type": "タイプ",
     "update": "更新",
+    "username": "ユーザー名",
     "visit": "訪問",
     "week": "週間",
     "workspace": "ワークスペース",
