--- a/locales/ja/form.json
+++ b/locales/ja/form.json
@@ -36,5 +36,11 @@
   },
   "type": {
     "typeRequired": "タイプは必須です"
+  },
+  "username": {
+    "usernameAlreadyUsed": "ユーザー名は既に使用されています",
+    "usernameInvalid": "ユーザー名が無効です",
+    "usernameNotExist": "ユーザー名が存在しません",
+    "usernameRequired": "ユーザー名は必須です"
   }
 }
