--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -69,6 +69,7 @@
     "title": "森特雷",
     "type": "类型",
     "update": "更新资料",
+    "username": "用户名",
     "visit": "访问",
     "week": "周",
     "workspace": "工作空间",
