feat: 🎸 complete refactor ui form components

--- a/locales/en/space.json
+++ b/locales/en/space.json
@@ -24,6 +24,9 @@
     "title": "Rooms"
   },
   "settings": {
+    "billing": "Billing",
+    "general": "General",
+    "quit": "Quit",
     "title": "Space Settings"
   },
   "space": {
