feat: 🎸 complete ini space billing board

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -6,12 +6,14 @@
     "avatar": "Avatar",
     "back": "Back",
     "billing": "Billing",
+    "billingLink": "Billing Link",
     "cancel": "Cancel",
     "create": "Create",
     "createRoom": "Create Room",
     "createSpace": "Create a Space",
     "darkMode": "Dark Mode",
     "dashboard": "Dashboard",
+    "disabled": "Disabled",
     "day": "Day",
     "delete": "Delete",
     "description": "Description",
