perf: ⚡️ refactor i18n space & common

--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -6,6 +6,7 @@
     "avatar": "アバター",
     "back": "バック",
     "billing": "課金",
+    "billingLink": "請求リンク",
     "cancel": "キャンセル",
     "create": "作成する",
     "createRoom": "部屋を作成",
@@ -15,6 +16,7 @@
     "day": "日",
     "delete": "削除する",
     "description": "説明",
+    "disabled": "無効",
     "duration": "期間",
     "edit": "編集する",
     "email": "電子メールアドレス",
