--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -6,6 +6,7 @@
     "avatar": "头像",
     "back": "背部",
     "billing": "开票",
+    "billingLink": "帐单连结",
     "cancel": "取消",
     "create": "创造",
     "createRoom": "创建房间",
@@ -15,6 +16,7 @@
     "day": "天",
     "delete": "删除",
     "description": "描述",
+    "disabled": "残障人士",
     "duration": "持续时间",
     "edit": "编辑",
     "email": "电子邮件地址",
