feat: 🎸 refactor room form settings

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -53,6 +53,7 @@
     "personal": "Personal",
     "photo": "Photo",
     "pickYourEmoji": "Pick Your Emoji",
+    "picture": "Picture",
     "pro": "Pro",
     "profile": "Profile",
     "quit": "Quit",
