feat: 🎸 ini form photo

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -72,6 +72,7 @@
     "title": "Sentrei",
     "type": "Type",
     "update": "Update",
+    "uploadPhoto": "Upload Photo",
     "username": "Username",
     "visit": "Visit",
     "week": "Week",
