perf: ⚡️ ini i18n common

--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -29,6 +29,8 @@
     "home": "家",
     "id": "ID",
     "invite": "邀请",
+    "inviteFrom": "邀请来自",
+    "inviteTo": "您已受邀参加",
     "language": "语言",
     "lastUpdated": "最近更新时间",
     "leaderboard": "排行榜",
@@ -53,6 +55,7 @@
     "personal": "个人",
     "photo": "照片",
     "pickYourEmoji": "选择您的表情符号",
+    "picture": "图片",
     "pro": "专业版",
     "profile": "个人资料",
     "quit": "退出",
@@ -71,6 +74,7 @@
     "title": "森特雷",
     "type": "类型",
     "update": "更新资料",
+    "uploadPhoto": "上传照片",
     "username": "用户名",
     "visit": "访问",
     "week": "周",
