--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -29,6 +29,8 @@
     "home": "ホーム",
     "id": "ID",
     "invite": "招待する",
+    "inviteFrom": "から招待",
+    "inviteTo": "に招待されました",
     "language": "言語",
     "lastUpdated": "最終更新",
     "leaderboard": "リーダーボード",
@@ -53,6 +55,7 @@
     "personal": "個人的な",
     "photo": "写真",
     "pickYourEmoji": "絵文字を選んでください",
+    "picture": "画像",
     "pro": "プロ",
     "profile": "プロフィール",
     "quit": "終了する",
@@ -71,6 +74,7 @@
     "title": "セントレイ",
     "type": "タイプ",
     "update": "更新",
+    "uploadPhoto": "写真をアップする",
     "username": "ユーザー名",
     "visit": "訪問",
     "week": "週間",
