feat: 🎸 refactor sentrei support

--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -13,6 +13,7 @@
     "releases": "Releases",
     "social": "Social",
     "specialThanks": "Special thanks to our families, friends, and everyone who have made the journey possible",
+    "support": "Support",
     "team": "Team",
     "terms": "Terms and Conditions",
     "titleOne": "Brought you with",
