--- a/locales/en/papercups.json
+++ b/locales/en/papercups.json
@@ -3,6 +3,7 @@
     "greeting": "Hi there! How can I help you?",
     "messagePlaceholder": "Start typing...",
     "subTitle": "Ask us anything in the chat window below 😊",
+    "support": "Welcome to Sentrei Support!",
     "title": "Welcome to Sentrei!"
   }
 }
