perf: ⚡️ ini i18n papercups

--- a/locales/ja/footer.json
+++ b/locales/ja/footer.json
@@ -13,6 +13,7 @@
     "releases": "リリース一覧",
     "social": "SNS",
     "specialThanks": "家族、友人、そしてこの瞬間を可能にしてくれたすべての人に感謝します",
+    "support": "サポート",
     "team": "チーム",
     "terms": "利用規約",
     "titleOne": "あなたへ",
