--- a/locales/ja/papercups.json
+++ b/locales/ja/papercups.json
@@ -3,6 +3,7 @@
     "greeting": "こんにちは！\nどんな御用でしょうか？",
     "messagePlaceholder": "入力を開始...",
     "subTitle": "下のチャットウィンドウで質問してください😊",
+    "support": "Sentrei Supportへようこそ！",
     "title": "セントレイへようこそ！"
   }
 }
