--- a/locales/zh/footer.json
+++ b/locales/zh/footer.json
@@ -13,6 +13,7 @@
     "releases": "发布",
     "social": "社会的",
     "specialThanks": "特别感谢我们的家人，朋友和所有使旅程成为可能的人",
+    "support": "支持",
     "team": "球队",
     "terms": "条款和条件",
     "titleOne": "带给你",
