--- a/locales/zh/papercups.json
+++ b/locales/zh/papercups.json
@@ -3,6 +3,7 @@
     "greeting": "嗨，您好！\n我怎么帮你？",
     "messagePlaceholder": "开始输入...",
     "subTitle": "在below下面的聊天窗口中问我们任何问题",
+    "support": "欢迎来到Sentrei支持！",
     "title": "欢迎来到森特雷！"
   }
 }
