perf: ⚡️ ini seo landing

--- a/locales/ja/seo.json
+++ b/locales/ja/seo.json
@@ -1,4 +1,17 @@
 {
+  "landing": {
+    "about": "約",
+    "credits": "ありがとうございました。",
+    "landing": "つなぐ。\nフォーカス。\n作業。",
+    "login": "ログインする",
+    "pitch": "ピッチ",
+    "pricing": "価格",
+    "privacy": "個人情報保護方針",
+    "reset-password": "パスワードを再設定する",
+    "signup": "サインアップ",
+    "support": "サポート",
+    "terms": "規約と条件"
+  },
   "room": {
     "home": "ホーム",
     "settings": "設定"
