perf: ⚡️ ini invite seo

--- a/locales/en/seo.json
+++ b/locales/en/seo.json
@@ -2,6 +2,7 @@
   "landing": {
     "about": "About",
     "credits": "Thank you.",
+    "invite": "Invitation",
     "landing": "Bond. Focus. Work.",
     "login": "Login",
     "pitch": "Pitch",
