--- a/locales/zh/seo.json
+++ b/locales/zh/seo.json
@@ -2,6 +2,7 @@
   "landing": {
     "about": "关于",
     "credits": "谢谢。",
+    "invite": "邀请函",
     "landing": "键。\n焦点。\n工作。",
     "login": "登录",
     "pitch": "沥青",
