feat: 🎸 ini complete seo

--- a/locales/en/seo.json
+++ b/locales/en/seo.json
@@ -3,7 +3,7 @@
     "about": "About",
     "credits": "Thank you.",
     "invite": "Invitation",
-    "landing": "Bond. Focus. Work.",
+    "landing": "Sentrei - Bond. Focus. Work.",
     "login": "Login",
     "pitch": "Pitch",
     "pricing": "Pricing",
