--- a/locales/ja/seo.json
+++ b/locales/ja/seo.json
@@ -3,7 +3,7 @@
     "about": "会社について",
     "credits": "ありがとうございます",
     "invite": "招待",
-    "landing": "繋がる。没頭。作業。",
+    "landing": "Sentrei - 繋がる。没頭。作業。",
     "login": "ログインする",
     "pitch": "ピッチ",
     "pricing": "価格",
