--- a/locales/zh/seo.json
+++ b/locales/zh/seo.json
@@ -3,7 +3,7 @@
     "about": "关于",
     "credits": "谢谢。",
     "invite": "邀请函",
-    "landing": "键。\n焦点。\n工作。",
+    "landing": "Sentrei - 键。焦点。工作。",
     "login": "登录",
     "pitch": "沥青",
     "pricing": "价钱",
