feat: 🎸 refactor space billing board

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -36,6 +36,7 @@
     "leaderboard": "Leaderboard",
     "lightMode": "Light Mode",
     "link": "Link",
+    "loading": "Loading...",
     "loadMore": "Load More",
     "logout": "Logout",
     "members": "Members",
@@ -69,6 +70,7 @@
     "space": "Space",
     "status": "Status",
     "submit": "Submit",
+    "subscriptionNone": "No Subscriptions Yet",
     "support": "Support",
     "team": "Team",
     "title": "Sentrei",
