--- a/locales/ja/common.json
+++ b/locales/ja/common.json
@@ -37,6 +37,7 @@
     "lightMode": "ライトモード",
     "link": "リンク",
     "loadMore": "もっと読み込む",
+    "loading": "読み込んでいます...",
     "logout": "ログアウト",
     "members": "会員",
     "mode": "モード",
@@ -69,6 +70,7 @@
     "space": "スペース",
     "status": "状態",
     "submit": "参加する",
+    "subscriptionNone": "まだ購読はありません",
     "support": "サポート",
     "team": "チーム",
     "title": "セントレイ",
