--- a/locales/zh/common.json
+++ b/locales/zh/common.json
@@ -37,6 +37,7 @@
     "lightMode": "灯光模式",
     "link": "链接",
     "loadMore": "装载更多",
+    "loading": "载入中...",
     "logout": "登出",
     "members": "会员",
     "mode": "模式",
@@ -69,6 +70,7 @@
     "space": "空间",
     "status": "状态",
     "submit": "提交",
+    "subscriptionNone": "尚无订阅",
     "support": "支持",
     "team": "球队",
     "title": "森特雷",
