feat: 🎸 complete refactor pricing

--- a/locales/ja/pricing.json
+++ b/locales/ja/pricing.json
@@ -1,27 +1,33 @@
 {
   "card": {
-    "buttonTextOne": "無料でお申し込み頂けます",
-    "buttonTextThree": "お問い合わせ",
-    "buttonTextTwo": "始めましょう",
-    "description1One": "時間無制限",
-    "description1Three": "時間無制限",
-    "description1Two": "時間無制限",
-    "description2One": "3ユーザーを含む",
-    "description2Three": "制限のないユーザーとワークスペース",
-    "description2Two": "無制限のユーザー",
-    "description3One": "ヘルプセンターへのアクセス",
-    "description3Three": "専任ヘルプチーム",
-    "description3Two": "ヘルプセンターへのアクセス",
-    "perUser": "ユーザー",
+    "enterprise": {
+      "buttonText": "お問い合わせ",
+      "description1": "時間無制限",
+      "description2": "無制限のユーザー",
+      "description3": "専属サポートチーム",
+      "price": "カスタム",
+      "title": "企業"
+    },
+    "free": {
+      "buttonText": "無料でスタート",
+      "description1": "時間無制限",
+      "description2": "10ユーザーを含む",
+      "description3": "ヘルプセンターへのアクセス",
+      "price": "0円",
+      "title": "自由"
+    },
+    "perUser": "ユーザーあたり",
     "priceMonth": "/月",
-    "priceOne": "0円",
-    "priceThree": "4500円",
-    "priceTwo": "3000円",
-    "sectionTitle": "Pricing",
-    "subTitleTwo": "最も人気のある",
-    "titleOne": "無料",
-    "titleThree": "企業",
-    "titleTwo": "プロフェッショナル"
+    "pro": {
+      "buttonText": "始める",
+      "description1": "時間無制限",
+      "description2": "無制限のユーザー",
+      "description3": "ヘルプセンターへのアクセス",
+      "price": "3,000円",
+      "subTitle": "最も人気のある",
+      "title": "プロ"
+    },
+    "sectionTitle": "価格"
   },
   "pricing": {
     "questions": "ご不明な点がございましたら、お気軽にお問い合わせください",
