--- a/locales/en/pricing.json
+++ b/locales/en/pricing.json
@@ -1,27 +1,33 @@
 {
   "card": {
-    "buttonTextOne": "Sign up for free",
-    "buttonTextThree": "Contact us",
-    "buttonTextTwo": "Get started",
-    "description1One": "Unlimited time",
-    "description1Three": "Unlimited time",
-    "description1Two": "Unlimited time",
-    "description2One": "3 users included",
-    "description2Three": "Unlimited users & workspaces",
-    "description2Two": "Unlimited users",
-    "description3One": "Help center access",
-    "description3Three": "Designated success team",
-    "description3Two": "Help center access",
+    "free": {
+      "buttonText": "Sign up for free",
+      "description1": "Unlimited time",
+      "description2": "10 users included",
+      "description3": "Help center access",
+      "price": "$0",
+      "title": "Free"
+    },
+    "pro": {
+      "buttonText": "Get started",
+      "description1": "Unlimited time",
+      "description2": "Unlimited users",
+      "description3": "Help center access",
+      "price": "$30",
+      "subTitle": "Most popular",
+      "title": "Pro"
+    },
+    "enterprise": {
+      "buttonText": "Contact us",
+      "description1": "Unlimited time",
+      "description2": "Unlimited users & workspaces",
+      "description3": "Designated success team",
+      "price": "Custom",
+      "title": "Enterprise"
+    },
     "perUser": "per user",
     "priceMonth": "/mo",
-    "priceOne": "$0",
-    "priceThree": "$45",
-    "priceTwo": "$30",
-    "sectionTitle": "Pricing",
-    "subTitleTwo": "Most popular",
-    "titleOne": "Free",
-    "titleThree": "Enterprise",
-    "titleTwo": "Pro"
+    "sectionTitle": "Pricing"
   },
   "pricing": {
     "questions": "If you have any questions, please don't hesitate to contact us",
