--- a/locales/zh/pricing.json
+++ b/locales/zh/pricing.json
@@ -4,7 +4,7 @@
       "buttonText": "联系我们",
       "description1": "无限时间",
       "description2": "无限的用户",
-      "description3": "指定成功团队",
+      "description3": "",
       "price": "自订",
       "title": "企业"
     },
@@ -12,7 +12,7 @@
       "buttonText": "免费注册",
       "description1": "无限时间",
       "description2": "包括10个用户",
-      "description3": "帮助中心访问",
+      "description3": "",
       "price": "$ 0",
       "title": "自由"
     },
@@ -22,7 +22,7 @@
       "buttonText": "开始吧",
       "description1": "无限时间",
       "description2": "无限的用户",
-      "description3": "帮助中心访问",
+      "description3": "",
       "price": "$ 30",
       "subTitle": "最受欢迎",
       "title": "专业版"
